# workVIP

./: .gitignore  MAIN_BRANCH_READINESS.md  QUICK_START_FOR_SUPERVISORS.md  README.md  README_BENCHMARKING.md  TECHNICAL_IMPLEMENTATION_SUMMARY.md  WORKSPACE_STRUCTURE.md  pyproject.toml  requirements.txt  setup.py  start_server.py
api/: main.py
bench/: __init__.py
bench/benchcore/: __init__.py
bench/benchcore/adapters/: __init__.py  pipeline_adapter.py
bench/benchcore/eval/: __init__.py  metrics.py
bench/benchcore/hitl/: __init__.py
bench/benchcore/techniques/: __init__.py  base.py
bench/benchcore/techniques/baseline/: __init__.py  technique.py
bench/benchcore/techniques/improved/: __init__.py  background_removal.py  technique.py  (+3 more)
bench/benchcore/utils/: environment.py
bench/benchcore/viz/: report.py
bench/configs/datasets/: demo_dataset.yaml  gc10_det.yaml  neu_surface_defects.yaml  roboflow_plastic_defects.yaml
bench/configs/experiments/: baseline_vs_improved.yaml  main_branch_readiness.yaml  multi_dataset_comparison.yaml  neu_dataset_test.yaml  production_readiness_test.yaml  surface_defects_benchmark.yaml
bench/configs/techniques/: baseline.yaml
configs/: tunables.yaml
configs/datasets/: demo_surface_defects.yaml  mvtec_ad.yaml  roboflow_plastic_defects.yaml  tarros_dataset.yaml
configs/experiments/: baseline_demo.yaml  comprehensive_final_benchmark.yaml  container_inspection_test.yaml  demo_with_manifest.yaml  real_datasets_test.yaml  roboflow_plastic_test.yaml
configs/techniques/: improved.yaml
data/: README.md
data/processed/demo_surface_defects/: manifest.jsonl
docs/: CHANGELOG.md  TECHNICAL_README.md  Vision Inspection Pipeline_ Improvement and Benchmarking Plan.docx
reports/: README.md  benchmarking_report.md
scripts/: auto_discover_roboflow.py  bench_report.py  bench_run.py  create_manifests.py  discover_roboflow_project.py  download_datasets.py  download_plastic_containers.py  download_roboflow.py  get_roboflow_projects.py  roboflow_direct_download.py
src/vip/: __init__.py  cli.py  config.py  config_loader.py  pipeline.py
src/vip/detect/: base.py  contamination.py  cracks.py  discoloration.py  flash.py  scratches.py
src/vip/io/: loader.py  writer.py
src/vip/utils/: viz.py
tests/: test_detectors.py  test_pipeline.py
